tdf#165811 calc mouse select sometimes off by one char

regression from
    commit 11b15571475414ef853e21a6c96afa2ac81f848f
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Wed Oct 30 09:51:26 2024 +0200
    convert KernArray from sal_Int32 to double

Change-Id: I9266693fa8d449c3369b65c31fbb4a3d3182777f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183452
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit 0afe740800a5a2a4bc2041fa602b11dc31a4a4e1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183476
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>